--- a/tp1/index.html
+++ b/tp1/index.html
@@ -5,8 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="stile.css">
 </head>
 <body>
-    
+    <h1>Trabajo Practico 1</h1>
+    <p>Loren ipsum dolor sit Loren ipsum dolor sit Loren ipsum dolor sit Loren ipsum dolor sit Loren ipsum dolor sit Loren ipsum dolor sit Loren ipsum dolor sit Loren ipsum dolor sit Loren ipsum dolor sit Loren ipsum dolor sit Loren ipsum dolor sit Loren ipsum dolor sit </p>
+
+    <div class="cuadrado">#123123</div>
+    <br />
+    <div class="cuadrado">#123123</div>
+    <br />
+    <div class="cuadrado">#123123</div>
+    <br />
+    <div class="cuadrado">#123123</div>
+    <br />
+    <div class="cuadrado">#123123</div>
+    <br />
+    <div class="cuadrado">#123123</div>
+    <br />
+    <div class="cuadrado">#123123</div>
+    <br />
+    <div class="cuadrado">#123123</div>
+    <br />
+
 </body>
 </html>
