--- a/tp1/index.html
+++ b/tp1/index.html
@@ -11,22 +11,22 @@
     <h1>Trabajo Practico 1</h1>
     <p>Loren ipsum dolor sit Loren ipsum dolor sit Loren ipsum dolor sit Loren ipsum dolor sit Loren ipsum dolor sit Loren ipsum dolor sit Loren ipsum dolor sit Loren ipsum dolor sit Loren ipsum dolor sit Loren ipsum dolor sit Loren ipsum dolor sit Loren ipsum dolor sit </p>
 
-    <div class="cuadrado">#123123</div>
+    <div class="cuadrado" id="box_red">#123123</div>
     <br />
-    <div class="cuadrado">#123123</div>
+    <div class="cuadrado" id="box_yellow">#123123</div>
     <br />
-    <div class="cuadrado">#123123</div>
+    <div class="cuadrado" id="box_green">#123123</div>
     <br />
-    <div class="cuadrado">#123123</div>
+    <div class="cuadrado" id="box_pink">#123123</div>
     <br />
-    <div class="cuadrado">#123123</div>
+    <div class="cuadrado" id="box_indigo">#123123</div>
     <br />
-    <div class="cuadrado">#123123</div>
+    <div class="cuadrado" id="box_aliceblue">#123123</div>
     <br />
-    <div class="cuadrado">#123123</div>
+    <div class="cuadrado" id="box_grey">#123123</div>
     <br />
-    <div class="cuadrado">#123123</div>
+    <div class="cuadrado" id="box_plum">#123123</div>
     <br />
-
+   
 </body>
 </html>
