--- a/tp4/index.html
+++ b/tp4/index.html
@@ -4,12 +4,107 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Sorbetes</title>
+    <title>Bugs blog</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="caja_zapato">Sandalias</div>
-    <div class="caja_zapato">Zapatillas</div>
-    <div class="caja_zapato">Botas</div>
+    <div class="container">
+        <header>
+            <menu>
+                <ul class="nav">
+                    <li class="nav-item">
+                      <a class="nav-link" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Post</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Comments</a>
+                    </li>
+                  </ul>
+            </menu>
+            <div class="logo"> 
+                <img src="images/bug-solid.svg" alt="logo" class="logo">
+            </div>      
+            <menu>
+                <ul class="nav">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Contact</a>
+                    </li>
+                  </ul>
+            </menu>
+        </header>
+        <main>
+            <section class="section">
+              <div>
+                <article class="articles">
+                    <p>5 months ago in Journey</p>
+                    <h1>How can we sing about love?</h1>
+                    <img src="images/alan-emery-emTCWiq2txk-unsplash.jpg" alt="imagen 1" class="img-bugs">
+                    <p class="descripcion">Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.</p>
+                </article>
+                <article class="articles">
+                    <p>5 months ago in Lifestyle</p>
+                    <h1>Oh, I guess they have the blues</h1>
+                    <img src="images/aaron-burden-p9qQ6ccwTF4-unsplash.jpg" alt="imagen 2" class="img-bugs">
+                    <p class="descripcion">Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.</p>
+                </article>
+                <article class="articles">
+                    <p>8 months ago in Work</p>
+                    <h1>How can we, how can we sing about ourselves?</h1>
+                    <img src="images/alex-perez-YCdT7UJo4MA-unsplash.jpg" alt="imagen 3" class="img-bugs">
+                    <p class="descripcion">Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.</p>
+                </article>
+              </div>
+            </section>
+            <section class="section">
+              <div>
+                <article class="articles">
+                    <p class=>5 months ago in Lifestyle</p>
+                    <h1>The king is made of paper</h1>
+                    <img src="images/janice-gill-0PueFmKKF28-unsplash.jpg" alt="imagen 4" class="img-bugs">
+                    <p class="descripcion">Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.</p>
+                </article>
+                <article class="articles">
+                    <p class=>7 months ago in Work</p>
+                    <h1>Crying on the news</h1>
+                    <img src="images/david-clode-zE99_-6MdYM-unsplash.jpg" alt="imagen 5" class="img-bugs">
+                    <p class="descripcion">Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.</p>
+                </article>
+                <article class="articles">
+                    <p class=>10 months ago in Journey</p>
+                    <h1>How can you not sing about love?</h1>
+                    <img src="images/elegance-thika-Ja_FIdTNJaQ-unsplash.jpg" alt="imagen 6" class="img-bugs">
+                    <p class="descripcion">Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.</p>
+                </article>
+              </div>
+            </section>
+            <aside class="aside">
+              <div class="content">
+                <h1>About</h1>
+                <p>Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.</p>
+            </div>
+            <div class="content">
+                <h1>Popular Stories</h1>
+                <h2>The blind man</h2>
+                <img src="images/krzysztof-niewolny-k1G0qSy6Ctk-unsplash.jpg" alt="imagen 7" class="img-bugs-aside">
+                <p>5 months ago in Lifestyle </p>
+                <h2>Crying on the news</h2>
+                <img src="images/marian-beck-u_TTfi7jUkk-unsplash.jpg" alt="imagen 8" class="img-bugs-aside">
+                <p >8 months ago in Work</p>
+            </div>      
+            </aside>
+
+        </main>
+        <footer>
+
+        </footer>
+    </div>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
