--- a/tp4/index.html
+++ b/tp4/index.html
@@ -101,7 +101,8 @@
 
         </main>
         <footer>
-
+          <h1>Subscribe to our newsletter</h1>
+          <p>Join our monthly newsletter and never miss out on new stories and promotions.</p>
         </footer>
     </div>
     
